# Cpp-Project-Manager

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  conv.h  cp.cpp  cpfc.cpp  cpfd.cpp  cpfile.cpp  dist.make  makefile  path.md
.github/workflows/: release.yml  rust.yml
headers/: add.hpp  argCheck.hpp  conv.h  conv.hpp  cp.hpp  cpfile.h  create.hpp  misc.h  misc.hpp  parse.hpp  projectManager.h  projectManager.hpp  projects.hpp
no/include/: no.hpp
no/src/: main.cpp
source/: main.cpp
src/: build.rs  builder.rs  clangd.rs  compiler.rs  cp.cpp  cpfd.cpp  cpfile.cpp  cppm.rs  cpproject.cpp  dependencies.rs  env.cpp  main.cpp  main.rs  old_main.rs  templates.rs  wiki.cpp
src/cppm/: builder.rs  mod.rs
src/header/: conv.h
src/include/: create.hpp  misc.hpp  parse_args.h
test/: makefile
