[package]
name = "cppm"
version = "3.0.3"
edition = "2021"
authors = ["Maou Shimazu <maoushimazu@protonmail.com>", "BrandonDoesDev <brandon.powell.dev@gmail.com>", "Ruby Star <perhaps-you-know@what-is.ml>"]
description = "A C++ Project Manager"
readme = "README.md"
repository = "https://github.com/Maou-Shimazu/Cpp-Project-Manager"
license = "MIT"
keywords = ["cli", "terminal", "tui"]
exclude = [
    "test/*",
    ".vscode/*",
    ".idea/*",
]

[dependencies]
colored = "2"
dirs = "4.0.0"
fsio = "0.3.0" #note: get rid of fsio using std functions
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
ansi_term = "0.12.1"
clap = { version = "3.1.18", features = ["derive"] }
glob = "0.3.0"
ureq = "2.4.0"
serde_json = "1"
human-panic = "1.0.3"
