[package]
authors = ["Maou Shimazu <maoushimazu@protonmail.com>", "BrandonDoesDev <brandon.powell.dev@gmail.com>", "Ruby Star <perhaps-you-know@what-is.ml>"]
description = "A C++ Project Manager"
edition = "2021"
exclude = [
  "test/*",
  ".vscode/*",
  ".idea/*",
]
keywords = ["cli", "terminal", "tui"]
license = "MIT"
name = "cppm"
readme = "README.md"
repository = "https://github.com/Cpp-Project-Manager/Cpp-Project-Manager"
version = "3.0.5"

[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
colored = "2"
dirs = "4.0.0"
glob = "0.3.0"
human-panic = "1.0.3"
minreq = {version = "2.6.0", features = ["https"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1"
toml = "0.5.9"
git2 = "0.14.4"
indicatif = "0.16.2"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }